--- a/projectutstoko/projectutstoko.csproj
+++ b/projectutstoko/projectutstoko.csproj
@@ -8,4 +8,8 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="MySqlConnector" Version="2.3.7" />
+  </ItemGroup>
+
 </Project>
